test/spec_vectors/align64/ok/module_2.wat
(module (memory i64 0) (func (drop (i32.load16_s align=2 (i64.const 0)))))