test/spec_vectors/align64/fail/module_88.wat
(module (memory i64 0) (func (drop (i64.load8_s align=2 (i64.const 0)))))